--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,35 @@ input[type=checkbox] {
 #reviewList p {
 	font-size: 20px;
 	font-weight: 100;
+	margin-bottom: 50px;
 }
+
+#errPrompt {
+	width: 100%;
+	height: 80px;
+	top: 0;
+	position: fixed;
+	background-color: rgba(204, 0, 0, 0.5);
+	cursor: pointer;
+	text-align: center;
+	/*visibility: hidden;*/
+}
+
+#thePrompt {
+	line-height: 30px;
+	font-size: 30px;
+	margin: 25px 0 25px 0;
+}
+
+
+
+
+
+
+
+
+
+
 
 
 
